--- a/Image_Restoration.ipynb
+++ b/Image_Restoration.ipynb
@@ -18,19 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10ded6a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\kandikits\\deepfake-detection\\deepfake-detection-env\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -40,7 +31,10 @@
     "os.system(\"hub install deoldify==1.0.1\")\n",
     "import paddlehub as hub\n",
     "from pathlib import Path\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from PIL import Image\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -80,16 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "325f8002",
    "metadata": {},
    "outputs": [],
    "source": [
     "def colorize_image(image):\n",
-    "    if not os.path.exists(\"./output\"):\n",
-    "        os.makedirs(\"./output\")   \n",
-    "    result = model.predict(image)\n",
-    "    return result[0],result[1]"
+    "    if not os.path.exists(\"./output\"):\n",
+    "        os.makedirs(\"./output\")   \n",
+    "    result = model.predict(image)\n",
+    "    file='./output/DeOldify/image.png'\n",
+    "    img = Image.open(file)\n",
+    "    return img,file"
    ]
   },
   {
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6c6f46f9",
    "metadata": {},
    "outputs": [],
@@ -178,19 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "e0b1b21b",
    "metadata": {},
    "outputs": [],
    "source": [
     "interface1 = gr.Interface(\n",
-    "    colorize_image, [\n",
-    "        gr.Image(type=\"filepath\",label=\"Input Image\")\n",
-    "    ], [\n",
-    "        gr.outputs.Image(type=\"numpy\", label=\"Output Image\"),\n",
-    "        gr.outputs.File(label=\"Download the output image\")\n",
-    "    ],\n",
-    "    description=\"Colorize B/W, Grayscale images\")"
+    "    colorize_image, [\n",
+    "        gr.Image(type=\"filepath\",label=\"Input Image\")\n",
+    "    ], [\n",
+    "        gr.outputs.Image(type=\"filepath\", label=\"Output Image\"),\n",
+    "        gr.outputs.File(label=\"Download the output image\")\n",
+    "    ],\n",
+    "    description=\"Colorize B/W, Grayscale images\")"
    ]
   },
   {
@@ -203,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "3eff2010",
    "metadata": {},
    "outputs": [],
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "d946739c",
    "metadata": {},
    "outputs": [
@@ -237,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7904\n",
+      "Running on local URL:  http://127.0.0.1:7906\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -245,7 +241,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7904/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7906/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -258,9 +254,39 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 87,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://github.com/xinntao/facexlib/releases/download/v0.1.0/detection_Resnet50_Final.pth\" to C:\\kandikits\\image_restoration\\image_restoration\\gfpgan\\weights\\detection_Resnet50_Final.pth\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 104M/104M [00:50<00:00, 2.15MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://github.com/xinntao/facexlib/releases/download/v0.2.2/parsing_parsenet.pth\" to C:\\kandikits\\image_restoration\\image_restoration\\gfpgan\\weights\\parsing_parsenet.pth\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 81.4M/81.4M [00:45<00:00, 1.86MB/s]\n"
+     ]
     }
    ],
    "source": [
